--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "1.21", features = ["full"]}
 sqlx = { version = "0.5", features = ["runtime-actix-rustls", "sqlite", "macros", "offline", "chrono"]}
 actix-web = "4"
 actix-web-lab = "0.18"
+actix-web-httpauth = "0.8"
 actix-files = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
