--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,23 @@ rust-version = "1.60"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.21", features = ["full"]}
-sqlx = { version = "0.5", features = ["runtime-actix-rustls", "sqlite", "macros", "offline", "chrono"]}
-actix-web = "4"
-actix-web-lab = "0.18"
-actix-web-httpauth = "0.8"
-actix-files = "0.6"
+tokio = { version = "1.25", features = ["full"]}
+sqlx = { version = "0.6", features = ["runtime-actix-rustls", "sqlite", "macros", "offline", "chrono"]}
+
+axum = { version = "0.6" , features = ["multipart"] }
+
+# Axum builds on the types in Tower
+tower = "0.4"
+tower-http = { version = "0.4", features = [ "trace", "fs" ] }
+
+# Logs
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Templates
+tera = "1.17"
+
+# Utility
 serde = { version = "1.0", features = ["derive"] }
-env_logger = "0.9"
 log = "0.4"
 serde_yaml = "0.9"
-openssl = { version = "0.10", features = ["vendored"] }
-tera  = "1.17"
